--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
 {
   "dependencies": {
-    "@vitalets/google-translate-api": "^8.0.0",
-    "discord": "^0.8.2",
-    "discord.js": "^13.7.0",
-    "electron": "^18.2.3",
-    "free-translate": "^0.6.1",
-    "ws": "^8.6.0"
-  },
-  "devDependencies": {
-    "electron-builder": "^23.0.3"
+    "discord.js": "^14.15.3"
   }
 }
